# HSE_project

BigInteger/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_test.cpp
Code/: CMakeLists.txt
ConsoleApp/: CMakeLists.txt  homeWork.cpp
ConsoleApp/geometry/geometry/: CMakeLists.txt  Circle.h  IShape.h  Line.h  Point.h  Polygon.h  Ray.h  Segment.h  Vector.h  main.cpp
ConsoleApp/geometry/geometry/src/: Circle.cpp  Line.cpp  Point.cpp  Polygon.cpp  Ray.cpp  Segment.cpp  Vector.cpp
Geometry/: .clang-tidy  CMakeLists.txt  circle.h  ishape.h  line.h  main.cpp  point.h  polygon.h  ray.h  segment.h  vector.h
Geometry/src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
Vector/: CMakeLists.txt  main.cpp  vector.h
array/: CMakeLists.txt  array.h  main.cpp
bdz/: CMakeLists.txt
colloquim/: CMakeLists.txt  Vehicle.h
hw/: .clang-format  CMakeLists.txt  sum.cpp  sum.h
hw6/: CMakeLists.txt  main.cpp
hw_Rational/: CMakeLists.txt  main_test.cpp  rational.h
hw_stack/: CMakeLists.txt  stack_main.cpp
hw_stringview/: CMakeLists.txt  main_test.cpp  string_view.cpp  string_view.h  string_view_public_test.cpp
hw_stringview_test/: CMakeLists.txt  main_test.cpp  string_view.cpp  string_view.h
hw_until/: CMakeLists.txt  isSortedUntil.h  main.cpp
linked_list/: CMakeLists.txt
matrix/: CMakeLists.txt  main.cpp  matrix.h  rational.cpp
sem5_1/: CMakeLists.txt  linked_list.cpp  linked_list.h  main.cpp  single_node.cpp  single_node.h
sem8/: CMakeLists.txt  main.cpp
shared_ptr/: CMakeLists.txt  shared_ptr.h  (+1 more)
sr/: main.cpp  (+4 more)
(+6 files in other folders)
